<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_health_status"
            android:title="@string/health_status" />
        <item
            android:id="@+id/nav_prevention"
            android:title="@string/preventions" />
        <item
            android:id="@+id/nav_symptoms"
            android:title="@string/symptoms" />
        <item
            android:id="@+id/nav_state_data"
            android:title="@string/bd_state_data" />
        <!--        <item-->
        <!--            android:id="@+id/nav_popular_question"-->
        <!--            android:title="@string/popular_question" />-->
        <item
            android:id="@+id/nav_policy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
    </group>
    <item android:title="@string/settings">
        <menu>
            <!--            <item-->
            <!--                android:id="@+id/notification_menu"-->
            <!--                android:title="Notification"-->
            <!--               app:actionLayout="@layout/nav_switch_button" />-->
            <!--            <item-->
            <!--                android:id="@+id/location_menu"-->
            <!--                android:title="Location"-->
            <!--                app:actionLayout="@layout/nav_switch_button" />-->
            <item
                android:id="@+id/dark_menu"
                android:title="@string/dark_mode"
                app:actionLayout="@layout/nav_switch_button" />
        </menu>
    </item>
</menu>