<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="?attr/background_color"
    tools:context=".Activity.Fragment.SymptomActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/symptomBanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Corona Affected Patient"
                android:textColor="?attr/blue_and_white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="1dp"
                android:scrollbarThumbHorizontal="@null"
                android:scrollbarThumbVertical="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sliderItem1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/symptom_btn_background_without_rgb"
                        android:gravity="center"
                        android:minLines="2"
                        android:padding="10dp"
                        android:text="@string/symptomTitle1"
                        android:textColor="?attr/blue_and_white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sliderItem2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/symptom_btn_background_without_rgb"
                        android:gravity="center"
                        android:minLines="2"
                        android:padding="10dp"
                        android:text="@string/symptomTitle2"
                        android:textColor="?attr/blue_and_white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sliderItem3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/symptom_btn_background_without_rgb"
                        android:gravity="center"
                        android:minLines="2"
                        android:padding="10dp"
                        android:text="@string/symptomTitle3"
                        android:textColor="?attr/blue_and_white"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/sliderItem4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/symptom_btn_background_without_rgb"
                        android:gravity="center"
                        android:minLines="2"
                        android:padding="10dp"
                        android:text="@string/symptomTitle4"
                        android:textColor="?attr/blue_and_white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sliderItem5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/symptom_btn_background_without_rgb"
                        android:gravity="center"
                        android:minLines="2"
                        android:padding="10dp"
                        android:text="@string/symptomTitle5"
                        android:textColor="?attr/blue_and_white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sliderItem6"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/symptom_btn_background_without_rgb"
                        android:gravity="center"
                        android:minLines="2"
                        android:padding="10dp"
                        android:text="@string/symptomTitle6"
                        android:textColor="?attr/blue_and_white"
                        android:textSize="12sp" />

                </LinearLayout>
            </HorizontalScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2">

                <ImageView
                    android:id="@+id/symptomImg"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="1dp"
                    android:src="@drawable/ic_symptoms1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/symptomDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:lineSpacingExtra="6dp"
                    android:padding="20dp"
                    android:text="@string/SymptomDetails1"
                    android:textColor="?attr/fade_dark"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/symptomImg" />

                <TextView
                    android:id="@+id/symptomTitile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/symptomTitle1"
                    android:textColor="?attr/text_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/symptomDetails"
                    app:layout_constraintEnd_toStartOf="@+id/symptomImg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/symptomBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        app:adSize="FULL_BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>